--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-bottle==0.12.17
-Django==2.2.8
+asgiref==3.2.7
+bottle==0.12.18
+Django==3.0.5
 django-environ==0.4.5
 honcho==1.0.1
-pytz==2019.2
-sqlparse==0.3.0
+pytz==2019.3
+sqlparse==0.3.1
